# ublox-cellular-rs

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml  rustfmt.toml  tcp_flow.drawio
.github/workflows/: ci.yml  docs.yml  grcov.yml  lint.yml  test.yml
documentation/: state.drawio  tcp_flow.drawio
documentation/at_logs/: emnify_reset_connectivity.md  startup.md
examples/: README.md  linux.rs  linux_mqtt.rs
examples/common/: mod.rs  serial.rs
examples/common_lib/: Cargo.toml
examples/common_lib/src/: gpio.rs  lib.rs  serial.rs  timer.rs
examples/embassy-rp2040-example/: Cargo.toml  build.rs  rust-toolchain.toml
examples/embassy-rp2040-example/.cargo/: config.toml
examples/embassy-rp2040-example/src/: cell_transport.rs  lib.rs  main.rs
examples/embassy-stm32-example/: Cargo.toml  rust-toolchain.toml
examples/embassy-stm32-example/.cargo/: config.toml
examples/embassy-stm32-example/src/: main.rs
examples/linux/: Cargo.toml
examples/linux/src/: main.rs
examples/linux_jobs/: Cargo.toml
examples/linux_jobs/src/: file_handler.rs  main.rs
examples/linux_mqtt/: Cargo.toml
examples/linux_mqtt/src/: main.rs
examples/sockets/: Cargo.toml
examples/sockets/src/: main.rs
examples/tokio-std-example/: .gitignore  Cargo.toml  rust-toolchain.toml
examples/tokio-std-example/.cargo/: config.toml
src/: client.rs  config.rs  error.rs  gprs.rs  gsm.rs  hex.rs  lib.rs  module_timing.rs  prelude.rs  registration.rs  soc.rs  ssl.rs  test_helpers.rs  traits.rs
src/asynch/: control.rs  internal_stack.rs  mod.rs  network.rs  ppp.rs  pwr.rs  resources.rs  runner.rs  state.rs  urc_handler.rs
src/asynch/ublox_stack/: dns.rs  mod.rs  tcp.rs
src/command/: cmd.rs  error.rs  mod.rs  response.rs  types.rs
src/command/call_control/: mod.rs  types.rs
src/command/control/: mod.rs  responses.rs  types.rs
src/command/device_data_security/: mod.rs  types.rs
src/command/device_lock/: impl_.rs  mod.rs  responses.rs  types.rs
src/command/dns/: mod.rs  responses.rs  types.rs
src/command/file_system/: mod.rs  responses.rs
src/command/general/: mod.rs  responses.rs  types.rs
src/command/gpio/: mod.rs  responses.rs  types.rs
src/command/http/: mod.rs
src/command/ip_transport_layer/: mod.rs  responses.rs  types.rs  urc.rs
src/command/ipc/: mod.rs  types.rs
src/command/mobile_control/: mod.rs  responses.rs  types.rs
src/command/network_service/: impl_.rs  mod.rs  responses.rs  types.rs  urc.rs
src/command/networking/: mod.rs  responses.rs  types.rs
src/command/packet_switched_data_services/: mod.rs  responses.rs  types.rs
src/command/psn/: mod.rs  responses.rs  types.rs  urc.rs
src/command/sms/: mod.rs  types.rs  urc.rs
src/command/system_features/: mod.rs  responses.rs  types.rs
src/modules/: gprs.rs  gsm.rs  lara_r6.rs  lena_r8.rs  mod.rs  sara_r410m.rs  sara_r412m.rs  sara_r422.rs  sara_r5.rs  sara_u201.rs  soc.rs  ssl.rs  toby_r2.rs
src/socket/: meta.rs  mod.rs  ref_.rs  ring_buffer.rs  set.rs  tcp.rs  udp.rs
ublox-cellular/: Cargo.toml
ublox-cellular/src/: client.rs  config.rs  error.rs  hex.rs  lib.rs  module_cfg.rs  module_timing.rs  network.rs  power.rs  registration.rs  state.rs  test_helpers.rs
ublox-cellular/src/command/: error.rs  mod.rs
ublox-cellular/src/command/control/: mod.rs  responses.rs  types.rs
ublox-cellular/src/command/device_data_security/: mod.rs  responses.rs  types.rs
ublox-cellular/src/command/device_lock/: impl_.rs  mod.rs  responses.rs  types.rs
ublox-cellular/src/command/dns/: mod.rs  responses.rs  types.rs
ublox-cellular/src/command/file_system/: mod.rs  responses.rs
ublox-cellular/src/command/general/: mod.rs  responses.rs  types.rs
ublox-cellular/src/command/gpio/: mod.rs  responses.rs  types.rs
ublox-cellular/src/command/http/: mod.rs  urc.rs
ublox-cellular/src/command/ip_transport_layer/: mod.rs  responses.rs  types.rs  urc.rs
ublox-cellular/src/command/mobile_control/: mod.rs  responses.rs  types.rs
ublox-cellular/src/command/network_service/: impl_.rs  mod.rs  responses.rs  types.rs  urc.rs
ublox-cellular/src/command/psn/: impl_.rs  mod.rs  responses.rs  types.rs  urc.rs
ublox-cellular/src/command/sms/: mod.rs  types.rs  urc.rs
ublox-cellular/src/command/system_features/: mod.rs  responses.rs  types.rs
ublox-cellular/src/modules/: dns.rs  gprs.rs  gsm.rs  mod.rs  socket.rs  ssl.rs
ublox-cellular/src/services/: mod.rs
ublox-cellular/src/services/data/: apn.rs  dns.rs  error.rs  hex.rs  mod.rs  ssl.rs  tcp_stack.rs  tls.rs  udp_stack.rs
ublox-cellular/src/services/data/socket/: mod.rs  ref_.rs  ring_buffer.rs  set.rs  tcp.rs  udp.rs
ublox-cellular/src/services/location/: mod.rs
ublox-cellular/src/socket/: mod.rs  ref_.rs  ring_buffer.rs  set.rs  tcp.rs  udp.rs
