[package]
name = "ublox-cellular-rs"
version = "0.4.0"
authors = ["Mathias Koch <mk@blackbird.online>"]
description = "Driver crate for u-blox cellular devices, implementation follows 'UBX-13002752 - R65'"
readme = "../README.md"
keywords = ["arm", "cortex-m", "ublox", "cellular", "embedded-hal-driver"]
categories = ["embedded", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/BlackbirdHQ/ublox-cellular-rs"
edition = "2018"

[lib]
name = "ublox_cellular"
doctest = false

[dependencies]
atat = { version = "0.15", features = ["derive", "bytes"] }
embedded-hal = "1.0.0-alpha.6"
embedded-nal = "0.6.0"
fugit = { version = "0.3" }
hash32 = "^0.2.1"
hash32-derive = "^0.1.0"
heapless = { version = "^0.7", features = ["serde"] }
nb = "^1"
serde = { version = "^1", default-features = false, features = ["derive"] }
ublox-sockets = { version = "0.2" }

# Enable `serde` feature of `no-std-net`
no-std-net = { version = "^0.5", features = ["serde"] }

log = { version = "^0.4", default-features = false, optional = true }
defmt = { version = "^0.3", optional = true }

[features]
default = ["toby-r2", "socket-udp", "socket-tcp"]

defmt-impl = ["defmt", "ublox-sockets/defmt", "fugit/defmt", "atat/defmt", "heapless/defmt-impl"]

lara-r2 = []
leon-g1 = []
lisa-u2 = []
mpci-l2 = []
sara-g3 = []
sara-g4 = []
sara-u1 = []
sara-u2 = ["upsd-context-activation"]
toby-l2 = []
toby-r2 = []
topy-l4 = []

upsd-context-activation = []

socket-tcp = ["ublox-sockets/socket-tcp"]
socket-udp = ["ublox-sockets/socket-udp"]
