[package]
name = "ublox-cellular-rs"
version = "0.4.0"
authors = ["Mathias Koch <mk@blackbird.online>"]
description = "Driver crate for u-blox cellular devices, implementation follows 'UBX-13002752 - R65'"
readme = "../README.md"
keywords = ["arm", "cortex-m", "ublox", "cellular", "embedded-hal-driver"]
categories = ["embedded", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/BlackbirdHQ/ublox-cellular-rs"
edition = "2021"

[lib]
name = "ublox_cellular"
doctest = false

[dependencies]
atat = { version = "0.17", features = ["derive", "bytes"] }
embedded-hal = "=1.0.0-alpha.9"
embedded-nal = "0.6"
fugit = { version = "0.3" }
hash32 = "^0.2.1"
hash32-derive = "^0.1.0"
heapless = { version = "^0.7", features = ["serde"] }
nb = "^1"
serde = { version = "^1", default-features = false, features = ["derive"] }
ublox-sockets = "0.4"

# Enable `serde` feature of `no-std-net`
no-std-net = { version = "^0.5", features = ["serde"] }

log = { version = "^0.4", default-features = false, optional = true }
defmt = { version = "^0.3", optional = true }

[features]
default = ["lara-r6", "socket-udp", "socket-tcp"]

# Use `defmt-impl to enable defmt based logging
defmt-impl = ["defmt", "ublox-sockets/defmt", "fugit/defmt", "atat/defmt", "heapless/defmt-impl"]
# Use `log-impl` to enable log based logging
log-impl = ["log", "ublox-sockets/log", "atat/log"]

lara-r2 = []
lara-r6 = []
leon-g1 = []
lisa-u2 = []
mpci-l2 = []
sara-g3 = []
sara-g4 = []
sara-r5 = ["upsd-context-activation"]
sara-u1 = []
sara-u2 = ["upsd-context-activation"]
toby-l2 = []
toby-r2 = []
topy-l4 = []

upsd-context-activation = []

socket-tcp = ["ublox-sockets/socket-tcp"]
socket-udp = ["ublox-sockets/socket-udp"]
