[package]
name = "common_lib"
version = "0.0.1"
authors = ["Mathias Koch <mk@blackbird.online>"]
description = "Common implementations for ublox-cellular examples"
readme = "../../README.md"
keywords = ["arm", "cortex-m", "ublox", "cellular"]
categories = ["embedded", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/BlackbirdHQ/ublox-cellular-rs"
edition = "2018"

[lib]
name = "common"
doctest = false

[dependencies]
serialport = "3.3.0"
embedded-hal = "0.2.3"
nb = "0.1.2"
void = { version = "1.0.2", default-features = false }
rust-crypto = "^0.2"
