[package]
name = "common_lib"
version = "0.0.1"
authors = ["Mathias Koch <mk@blackbird.online>"]
description = "Common implementations for ublox-cellular examples"
readme = "../../README.md"
keywords = ["arm", "cortex-m", "ublox", "cellular"]
categories = ["embedded", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/BlackbirdHQ/ublox-cellular-rs"
edition = "2018"

[lib]
name = "common"
doctest = false

[dependencies]
serialport = "4"
embedded-hal = "^1.0.0-alpha.4"
nb = "1"
ublox-cellular-rs = { path = "../../ublox-cellular" }

[target.'cfg(target_os = "linux")'.dependencies]
linux-embedded-hal = "0.3"
