[package]
name = "linux_example"
version = "0.0.1"
authors = ["Mathias Koch <mk@blackbird.online>"]
description = "Example for running ublox-cellular in a linux environment"
readme = "../../README.md"
keywords = ["arm", "cortex-m", "ublox", "cellular", "example"]
categories = ["embedded", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/BlackbirdHQ/ublox-cellular-rs"
edition = "2018"

[dependencies]
embedded-hal = "1.0.0-alpha.4"
embedded-nal = "0.2.0"

atat = { version = "^0.6.0", features = ["derive"] }
heapless = "0.5.5"

common_lib = { path = "../common_lib" }
ublox-cellular-rs = { path = "../../ublox-cellular" }
