[package]
name = "linux_example"
version = "0.0.1"
authors = ["Mathias Koch <mk@blackbird.online>"]
description = "Example for running ublox-cellular in a linux environment"
readme = "../../README.md"
keywords = ["arm", "cortex-m", "ublox", "cellular", "example"]
categories = ["embedded", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/BlackbirdHQ/ublox-cellular-rs"
edition = "2018"

[dependencies]
embedded-hal = "^1.0.0-alpha.4"
atat = { git = "https://github.com/BlackbirdHQ/atat.git", features = ["derive", "defmt", "bytes"] }
log = { version = "0.4", default-features = false }
env_logger = "0.9"
linux-embedded-hal = "0.3"
serialport = "4"
heapless = "0.7"

common_lib = { path = "../common_lib" }
ublox-cellular-rs = { path = "../../ublox-cellular" }
