[package]
name = "linux_jobs_example"
version = "0.0.1"
authors = ["Mathias Koch <mk@blackbird.online>"]
description = "Example for running ublox-cellular with mqttrust & rustot in a linux environment"
readme = "../../README.md"
keywords = ["arm", "cortex-m", "ublox", "cellular", "example"]
categories = ["embedded", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/BlackbirdHQ/ublox-cellular-rs"
edition = "2018"

[dependencies]
embedded-hal = "0.2.3"
atat = { version = "^0.3.0", features = ["derive"] }
log = { version = "0.4", default-features = false }
env_logger = "0.7.1"
linux-embedded-hal = "0.3.0"
serialport = "3.3.0"
nb = "0.1.2"
heapless = { version = "^0.5", features = ["serde"] }
rust-crypto = "^0.2"
rustot = { path = "../../../rustot" }
mqttrust = { path = "../../../mqttrust", features = ["logging"] }

common_lib = { path = "../common_lib" }
ublox-cellular-rs = { path = "../../ublox-cellular", features = ["logging"]  }
