[package]
name = "linux_mqtt_example"
version = "0.0.1"
authors = ["Mathias Koch <mk@blackbird.online>"]
description = "Example for running ublox-cellular with mqttrust in a linux environment"
readme = "../../README.md"
keywords = ["arm", "cortex-m", "ublox", "cellular", "example"]
categories = ["embedded", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/BlackbirdHQ/ublox-cellular-rs"
edition = "2018"

[dependencies]
mqttrust = { git = "https://github.com/BlackbirdHQ/mqttrust", rev = "4c6c35e" }

embedded-hal = "1.0.0-alpha.4"
embedded-nal = "0.2.0"

atat = { version = "^0.6.0", features = ["derive"] }
heapless = { version = "^0.5.5", features = ["serde"] }

common_lib = { path = "../common_lib" }
ublox-cellular-rs = { path = "../../ublox-cellular" }
