[package]
name = "sockets"
version = "0.1.0"
authors = ["Mathias Koch <mk@blackbird.online>", "Andres Vahter <andres@vahter.me>"]
description = "Example for running ublox-cellular in a linux environment"
readme = "../../README.md"
keywords = ["arm", "cortex-m", "ublox", "cellular", "example"]
categories = ["embedded", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/BlackbirdHQ/ublox-cellular-rs"
edition = "2018"

[dependencies]
log = { version = "0.4", default-features = false }
env_logger = "0.9"
serialport = "4"
structopt = "0.3"
nb = "1"

common_lib = { path = "../common_lib" }
ublox-cellular-rs = { path = "../../ublox-cellular", default-features = false, features = ["log", "sara-n3", "socket-udp", "socket-tcp"] }
